# libascxx

./: CMakeLists.txt  README.md  config.hpp.in  copyright-notice.txt
ctest/: build-debian.cmake
src/: CMakeLists.txt  enum_traits.cpp  enum_traits.hpp  main.cpp  memory.cpp  memory.hpp  non_copyable.cpp  non_copyable.hpp  pod.cpp  pod.hpp  template.cpp  template.hpp  trace.cpp  trace.hpp  tuple.cpp  tuple.hpp
